--- a/WEBLAB1-1/index.html
+++ b/WEBLAB1-1/index.html
@@ -1,34 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-<!--        Title-->
         <title>CV: Stephen Gregan</title>
     </head>
         <body>
-<!--            My CV Profile-->
-            <h1>Profile</h1>
-            <p>Hi my name is <i>Stephen Gregan</i>.  I am a <b>Software Developer</b>.  I am proficient in <strong>C#</strong> and <em>Java</em></p>
-            <hr>
-<!--            Work Experience-->
-            <h1>Work Experience</h1>
-                <h2>Translation.ie</h2>
-                    <h3>Software Developer</h3>
-                        <h4>April 2018 - Setember 2018</h4>
-                            <small>I was testing software during htis time.</small>
-<!--            Education-->
-            <h1>Education</h1>
-                <h2>CCT College Dublin</h2>
-                    <h3>Higher Diploma in Science in Computing</h3>
-                        <h4>September 2018 - August 2020</h4>
-                            <small>I was testing software during htis time.</small>
-            <h2>Finglas Training Centre</h2>
-                    <h3>Software Developer</h3>
-                        <h4>April 2017 - April 2018</h4>
-                            <small>I was testing software during htis time.</small>
-            <h2>Finglas Training Centre</h2>
-                    <h3>Software Tester</h3>
-                        <h4>November 2016 - April 2017</h4>
-                            <small>I was testing software during htis time.</small>
+            <p>This is the beginning of my profile</p>
         </body>
-</html>    
-                
+</html>   
