--- a/WEBLAB1-2/index.html
+++ b/WEBLAB1-2/index.html
@@ -4,6 +4,72 @@
         <title>CV: Stephen Gregan</title>
     </head>
         <body>
-            <p>This is the beginning of my profile</p>
+            <!-- Start Of Div Main -->
+            <div class="main">
+                <!-- Start Of Div Header -->
+                <div class="header">       
+                </div>
+                <!-- End Of Div Header -->
+                <!-- Start Of Div Content -->
+                <div class="content">
+                    <!-- Start Of Profile Content -->
+                    <h1>Profile</h1>
+                        <p>Hi my name is <i>Stephen Gregan</i>.  I am a <b>Software Developer</b>.  I am proficient in <strong>C#</strong> and <em>Java</em></p>
+                        <hr>
+                        <!-- End Of Profile -->
+                        <!-- Start Of Work Experience Content -->
+                    <h1>Work Experience</h1>
+                        <h2>Translation.ie</h2>
+                            <h3>Software Developer</h3>
+                                <h4>April 2018 - September 2018</h4>
+                                    <small>I was testing software during htis time.</small>
+                                    <!-- End Of Work Experience Content -->
+                    <!-- Start Of Education Content -->
+                    <h1>Education</h1>
+                        <h2>CCT College Dublin</h2>
+                            <h3>Higher Diploma in Science in Computing</h3>
+                                <h4>September 2018 - August 2020</h4>
+                                    <small>I was testing software during htis time.</small>
+                        <h2>Finglas Training Centre</h2>
+                            <h3>Software Developer</h3>
+                                <h4>April 2017 - April 2018</h4>
+                                    <small>I was testing software during htis time.</small>
+                        <h2>Baldoyle Training Centre</h2>
+                            <h3>Software Tester</h3>
+                                <h4>November 2016 - April 2017</h4>
+                                    <small>I was testing software during htis time.</small>
+                                    <!-- End Of Education Content -->
+                    <!-- Start Of Self Studies Content -->
+                    <h1>Self Studies</h1>
+                        <p>Book 1</p>
+                        <p>Book 2</p>
+                        <p>Book 3</p>
+                        <p>Book 4</p>
+                        <!-- End Of Self Studies Content -->
+                    <!-- Start Of Skills Content -->
+                    <h1>Skills</h1>
+                        <p>Book 1</p>
+                        <p>Book 2</p>
+                        <p>Book 3</p>
+                        <p>Book 4</p>
+                        <!-- End Of Skills Content -->
+                    <!-- Start Of Hobbies & Interests Content -->
+                    <h1>Hobbies & Interests</h1>
+                        <p>1</p>
+                        <p>2</p>
+                        <p>3</p>
+                        <p>4</p>
+                        <p>5</p>
+                        <!-- End Of Hobbies & Interests -->
+                </div>
+                <!-- End Of Div Content -->
+                <!-- Start Of Div Footer -->
+                <div class="footer">
+                    
+                </div>  
+                <!-- End Of Div Footer -->
+            </div>
+            <!-- End Of Div Main -->
         </body>
-</html>    
+</html>   
+
