--- a/WEBLAB1-2/template.html
+++ b/WEBLAB1-2/template.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CV: Stephen Gregan</title>
+        <title></title>
     </head>
         <body>
-        <p>This is the beginning of my profile</p>
+        
         </body>
 </html>    
