--- a/WEBDEV2-1/index.html
+++ b/WEBDEV2-1/index.html
@@ -5,12 +5,16 @@
         <link rel="stylesheet" type="text/css" href="C:\Users\Stephen\Desktop\_WEBDEV\WEBDEV2-1\css\style.css">
     </head>
         <body>
+            <!-- Start Of Div Main -->
             <div class="main">
                 <center>
+                <!-- Start Of Div Header -->
                 <div class="header">
-                   
                 </div>
+                <!-- End Of Div Header -->
+                <!-- Start Of Div Content -->
                 <div class="content">
+                    <!-- Start Of Unordered List -->
                     <ul class="bubbles">
                         <li></li>
                         <li></li>
@@ -33,6 +37,8 @@
                         <li></li>
                         <li></li>
                     </ul>
+                    <!-- End Of Unordered List -->
+                    <!-- BreakPoint -->
                     <br>
                     <h1 class="title">Curriclum Vitae</h1>
                     <h1 class="colourband">Profile</h1>
@@ -96,12 +102,16 @@
                         <p>Computers (Hardware & Software)</p>
                         <br>
                 </div>
+                <!-- End Of Div Content -->
+                Start Of Div Footer 
                 <div class="footer">
                     <hr>
                     <p>@ Stephen Gregan 2018</p>
                 </div>
+                <!-- End Of Div Footer -->
                 </center>
             </div>
+            <!-- End Of Div Main -->
         </body>
 </html>   
 
