--- a/WEBDEV2-2/hobbiesAndInterests.html
+++ b/WEBDEV2-2/hobbiesAndInterests.html
@@ -7,59 +7,53 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     </head>
-        <body>
-            <div class="main">
-                <div class="header">
-                    <ul>
-                            <li><a href="index.html"><i class="fas fa-home"></i></a></li>
-            <li><a href="homepage.html"><i class="fas fa-building"></i></a></li>
+    <body>
+        <!-- Start Of Div Main -->
+    <div class="main">
+        <!-- Start Of Div Header -->
+        <div class="header">
+            <!-- Unordered List -->
+            <ul>
+                <li><a href="index.html"><i class="fas fa-home"></i></a></li>
+                <li><a href="homepage.html"><i class="fas fa-building"></i></a></li>
                 <li><a href="profile.html"><i class="fas fa-user-alt"></i></a></li>
-                    <li><a href="workExperience.html"><i class="fas fa-briefcase"></i></a></li>
-                        <li><a href="education.html"><i class="fas fa-graduation-cap"></i></a></li>
-                            <li><a href="selfStudies.html"><i class="fas fa-book"></i></a></li>
-                                <li><a href="skills.html"><i class="fas fa-arrows-alt"></i></a></li>
-                                    <li><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></i></a></li>
-                                        <li><a href="contactInformation.html"><i class="fas fa-phone"></i></i></a></li>
-    </ul>
-                    <!-- <button><a href="index.html"><i class="fas fa-home"></a></i></button>
-                     <button><a href="profile.html"><i class="fas fa-user-alt"></a></i></button>
-                      <button><a href="workExperience.html"><i class="fas fa-briefcase"></a></i></button>
-                       <button><a href="education.html"><i class="fas fa-graduation-cap"></a></i></button>
-                        <button><a href="selfStudies.html"><i class="fas fa-book"></a></i></button>
-                         <button><a href="skills.html"><i class="fas fa-arrows-alt"></a></i></button>
-                          <button><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></a></i></button>
-                           <button><a href="contactInformation.html"><i class="fas fa-phone"></a></i></button> -->
-                    <!-- <a href="index.html">Home</a>
-                    <a href="profile.html">Profile</a>
-                    <a href="workExperience.html">Work Experience</a>
-                    <a href="education.html">Education</a>
-                    <a href="selfStudies.html">Self Studies</a>
-                    <a href="skills.html">Skills</a>
-                    <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
-                    <a href="contactInformation.html">Contact Information</a> -->
-                </div>
-                <div class="content">
-                    <h1>Hobbies & Interests</h1>
-                         <ol style="list-style-type:disc">
-                            <li>Football</li>
-                            <li>Games</li>
-                            <li>Meditation</li>
-                            <li>Computers (Hardware & Software)</li>
-                            <li>Fantasy Books</li>
-                        </ol>  
-                </div>
-                <div class="footer">
-                     <!-- <img src="C:\Users\Stephen\Desktop\_WEBDEV\WEBLAB1-3\img\3A4wkht.png" alt="Mr Robot" width="500" height="500"> -->
-                    <hr>
-                    <div class="social-icons">
-                            <a class="facebook" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-                            <a class="twitter" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
-                            <a class="googleplus" href="https://plus.google.com/discover"><i class="fab fa-google-plus"></i></a>
-                            <a class="linkedin" href="https://ie.linkedin.com/"><i class="fab fa-linkedin"></i></a>
-                            <a class="github" href="https://github.com/"><i class="fab fa-github-square"></i></a>
-                        </div>
-                </div>  
+                <li><a href="workExperience.html"><i class="fas fa-briefcase"></i></a></li>
+                <li><a href="education.html"><i class="fas fa-graduation-cap"></i></a></li>
+                <li><a href="selfStudies.html"><i class="fas fa-book"></i></a></li>
+                <li><a href="skills.html"><i class="fas fa-arrows-alt"></i></a></li>
+                <li><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></i></a></li>
+                <li><a href="contactInformation.html"><i class="fas fa-phone"></i></i></a></li>
+            </ul>
             </div>
+            <!-- End Of Div Header -->
+            <!-- Start Of Div Content -->
+            <div class="content">
+                <h1>Hobbies & Interests</h1>
+                    <ol style="list-style-type:disc">
+                        <li>Football</li>
+                        <li>Games</li>
+                        <li>Meditation</li>
+                        <li>Computers (Hardware & Software)</li>
+                        <li>Fantasy Books</li>
+                    </ol>  
+                </div>
+                <!-- End Of Div Content -->
+                <!-- Start Of Div Footer -->
+                <div class="footer">
+                <hr>
+                <!-- Start Of Div Social Icons -->
+                <div class="social-icons">
+                        <a class="facebook" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+                        <a class="twitter" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
+                        <a class="googleplus" href="https://plus.google.com/discover"><i class="fab fa-google-plus"></i></a>
+                        <a class="linkedin" href="https://ie.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+                        <a class="github" href="https://github.com/"><i class="fab fa-github-square"></i></a>
+                    </div>
+                    <!-- End Of Div Social Icons -->
+                </div>  
+                <!-- End Of Div Footer -->
+            </div>
+            <!-- End Of Div Main -->
         </body>
 </html>   
 
