--- a/WEBDEV2-2/homepage.html
+++ b/WEBDEV2-2/homepage.html
@@ -14,68 +14,51 @@
                 <!-- Start Of Div Header -->
                 <div class="header">
                     <ul>
-                <li><a href="index.html"><i class="fas fa-home"></i></a></li>
-            <li><a href="homepage.html"><i class="fas fa-building"></i></a></li>
-                <li><a href="profile.html"><i class="fas fa-user-alt"></i></a></li>
-                    <li><a href="workExperience.html"><i class="fas fa-briefcase"></i></a></li>
+                        <li><a href="index.html"><i class="fas fa-home"></i></a></li>
+                        <li><a href="homepage.html"><i class="fas fa-building"></i></a></li>
+                        <li><a href="profile.html"><i class="fas fa-user-alt"></i></a></li>
+                        <li><a href="workExperience.html"><i class="fas fa-briefcase"></i></a></li>
                         <li><a href="education.html"><i class="fas fa-graduation-cap"></i></a></li>
-                            <li><a href="selfStudies.html"><i class="fas fa-book"></i></a></li>
-                                <li><a href="skills.html"><i class="fas fa-arrows-alt"></i></a></li>
-                                    <li><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></i></a></li>
-                                        <li><a href="contactInformation.html"><i class="fas fa-phone"></i></i></a></li>
-    </ul>
-                    <!-- <button><a href="index.html"><i class="fas fa-home"></a></i></button>
-                     <button><a href="profile.html"><i class="fas fa-user-alt"></a></i></button>
-                      <button><a href="workExperience.html"><i class="fas fa-briefcase"></a></i></button>
-                       <button><a href="education.html"><i class="fas fa-graduation-cap"></a></i></button>
-                        <button><a href="selfStudies.html"><i class="fas fa-book"></a></i></button>
-                         <button><a href="skills.html"><i class="fas fa-arrows-alt"></a></i></button>
-                          <button><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></a></i></button>
-                           <button><a href="contactInformation.html"><i class="fas fa-phone"></a></i></button> -->
-                    <!-- <button><a href="index.html">Home</a></button>
-                    <button><a href="profile.html">Profile</a></button>
-                    <button><a href="workExperience.html">Work Experience</a></button>
-                    <button><a href="education.html">Education</a></button>
-                    <button><a href="selfStudies.html">Self Studies</a></button>
-                    <button><a href="skills.html">Skills</a></button>
-                    <button><a href="hobbiesAndInterests.html">Hobbies & Interests</a></button>
-                    <button><a href="contactInformation.html">Contact Information</a></button> -->
-                </div>
-                <!-- End Of Div Header -->
-                <!-- Start Of Div Content -->
-                <div class="content">
-                    <h1 class="title">Curriculum Vitae</h1>
-                    <!-- Start Of Profile -->
-                    <h1 class="colourband">Profile</h1>
-                        <p>Upcoming Software Developer with in-company application development experience, college studies and self study.  Experience in both Software Testing and Software Development.  Trained using Agile methodology.  Languages include Java, C# and SQL.  Proficient in various Microsoft Azure Cognitive Services.  In my spare time I am learning JavaScript along with Node.js.  I am also interested in learning Ruby and Ruby on Rails.  All my code is available to view on my GitHub Account: https://github.com/StephenGregan.</p>
-                        <!-- <p>Hi my name is <i>Stephen Gregan</i>.  I am a <b>Software Developer</b>.  I am proficient in <strong>C#</strong> and <em>Java</em></p> -->
+                        <li><a href="selfStudies.html"><i class="fas fa-book"></i></a></li>
+                        <li><a href="skills.html"><i class="fas fa-arrows-alt"></i></a></li>
+                        <li><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></i></a></li>
+                        <li><a href="contactInformation.html"><i class="fas fa-phone"></i></i></a></li>
+                    </ul>
+                    </div>
+                    <!-- End Of Div Header -->
+                    <!-- Start Of Div Content -->
+                    <div class="content">
+                        <h1 class="title">Curriculum Vitae</h1>
+                        <!-- Start Of Profile -->
+                        <h1 class="colourband">Profile</h1>
+                        <p>Upcoming <i>Software Developer</i> with in-company application development experience, college studies and self study.  Experience in both <b>Software Testing</b> and <b>Software Development</b>.  Trained using Agile methodology.  Languages include Java, C# and SQL.  Proficient in various <strong>Microsoft Azure Cognitive Services</strong>.  In my spare time I am learning <em>JavaScript</em> along with Node.js.  I am also interested in learning Ruby and Ruby on Rails.  All my code is available to view on my GitHub Account: <i>https://github.com/StephenGregan</i>.</p>
                         <!-- End Of Profile -->
-                    <!-- Start Of Work Experience -->
-                    <h1 class="colourband">Work Experience</h1>
+                        <!-- Start Of Work Experience -->
+                        <h1 class="colourband">Work Experience</h1>
                         <h2><i>Translation.ie</i></h2>
-                            <h3><i>Software Developer<i></h3>
-                                <h4><i>April 2018 - September 2018<i></h4>
-                                    <small>I was working as a developer using Microsoft Cognitive Services.  All my coding in company was in C#.</small>
-                                    <!-- End Of Work Experience -->
-                    <!-- Start Of Education -->
-                    <h1 class="colourband">Education</h1>
+                        <h3><i>Software Developer<i></h3>
+                        <h4><i>April 2018 - September 2018<i></h4>
+                        <small>I was working as a developer using Microsoft Cognitive Services.  All my coding in company was in C#.</small>
+                        <!-- End Of Work Experience -->
+                        <!-- Start Of Education -->
+                        <h1 class="colourband">Education</h1>
                         <h2><i>CCT College Dublin<i></h2>
-                            <h3><i>Higher Diploma in Science in Computing<i></h3>
-                                <h4>September 2018 - August 2020</h4>
-                                    <small>I am currently studying part time.</small>
-                                    <hr>
+                        <h3><i>Higher Diploma in Science in Computing<i></h3>
+                        <h4>September 2018 - August 2020</h4>
+                        <small>I am currently studying part time.</small>
+                        <hr>
                         <h2><i>Finglas Training Centre<i></h2>
-                            <h3><i>Software Developer<i></h3>
-                                <h4>April 2017 - April 2018</h4>
-                                    <small>I was training as a Software Developer using Java.</small>
-                                    <hr>
+                        <h3><i>Software Developer<i></h3>
+                        <h4>April 2017 - April 2018</h4>
+                        <small>I was training as a Software Developer using Java.</small>
+                        <hr>
                         <h2><i>Baldoyle Training Centre</i></h2>
-                            <h3><i>Software Tester</i></h3>
-                                <h4>November 2016 - April 2017</h4>
-                                    <small>I was testing software doing manual testing and automation testing.</small>
-                                    <!-- End Of Education -->
-                    <!-- Start Of Self Studies -->
-                    <h1 class="colourband">Self Studies</h1>
+                        <h3><i>Software Tester</i></h3>
+                        <h4>November 2016 - April 2017</h4>
+                        <small>I was testing software doing manual testing and automation testing.</small>
+                        <!-- End Of Education -->
+                        <!-- Start Of Self Studies -->
+                        <h1 class="colourband">Self Studies</h1>
                         <table class="center">
                             <tr>
                                 <th class="colour"><b>Book Name</b></th>
@@ -98,9 +81,9 @@
                                 <td>Jeanne Boyarsky & Scott Selikoff</td>
                             </tr>
                         </table>
-                        <!-- End Of Self Studies -->
+                        <!-- End Of Table Center -->
                         <!-- Start Of Skills -->
-                    <h1 class="colourband">Skills</h1>
+                        <h1 class="colourband">Skills</h1>
                         <ol style="list-style-type:disc">
                             <li>Flexible and Adaptable</li>
                             <li>Enthusiastic and Committed</li>
@@ -110,8 +93,8 @@
                             <li>Analytically focused, a good listener and a quick learner who enjoys challenges</li>
                         </ol>  
                         <!-- End Of Skills -->
-                    <!-- Start Of Hobbies & Interests -->
-                    <h1 class="colourband">Hobbies & Interests</h1>
+                        <!-- Start Of Hobbies & Interests -->
+                        <h1 class="colourband">Hobbies & Interests</h1>
                         <ol style="list-style-type:disc">
                             <li>Football</li>
                             <li>Games</li>
@@ -120,23 +103,22 @@
                             <li>Fantasy Books</li>
                         </ol>  
                         <!-- End Of Hobbies & Interests -->
-                </div>
-                <!-- End Of Div Content -->
+                    </div>
+                    <!-- End Of Div Content -->
                 <!-- Start Of Div Footer -->
                 <div class="footer">
-                    <!-- <img src="C:\Users\Stephen\Desktop\_WEBDEV\WEBLAB1-3\img\3A4wkht.png" class="img" alt="Mr Robot" width="500" height="500"> -->
                     <br>
                     <hr>
-                    <div class="social-icons">
+                        <div class="social-icons">
                             <a class="facebook" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
                             <a class="twitter" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>
                             <a class="googleplus" href="https://plus.google.com/discover"><i class="fab fa-google-plus"></i></a>
                             <a class="linkedin" href="https://ie.linkedin.com/"><i class="fab fa-linkedin"></i></a>
                             <a class="github" href="https://github.com/"><i class="fab fa-github-square"></i></a>
                         </div>
-                </div>  
-                <!-- End Of Div Footer -->
-            </div>
-            <!-- End Of Div Main -->
-        </body>
-</html>   
+                    </div>  
+                    <!-- End Of Div Footer -->
+                </div>
+                <!-- End Of Div Main -->
+            </body>
+    </html>   
