--- a/WEBLAB1-2/index.html
+++ b/WEBLAB1-2/index.html
@@ -14,7 +14,7 @@
                 <div class="content">
                     <!-- Start Of Profile Content -->
                     <h1>Profile</h1>
-                        <p>Hi my name is <i>Stephen Gregan</i>.  I am a <b>Software Developer</b>.  I am proficient in <strong>C#</strong> and <em>Java</em></p>
+                        <p>Upcoming Software Developer with in-company application development experience, college studies and self study.  Experience in both <i>Software Testing</i> and <i>Software Development</i>.  Trained using <b>Agile</b> methodology.  Languages include <strong>Java</strong>, <em>C#</em> and <strong>SQL</strong>.  Proficient in various Microsoft Azure Cognitive Services.  In my spare time I am learning JavaScript along with Node.js.  I am also interested in learning Ruby and Ruby on Rails.  All my code is available to view on my GitHub Account: https://github.com/StephenGregan.</p>
                         <hr>
                         <!-- End Of Profile -->
                         <!-- Start Of Work Experience Content -->
@@ -22,44 +22,65 @@
                         <h2>Translation.ie</h2>
                             <h3>Software Developer</h3>
                                 <h4>April 2018 - September 2018</h4>
-                                    <small>I was testing software during htis time.</small>
+                                    <small>I was working as a developer using Microsoft Cognitive Services.  All my coding in company was in C#.</small>
                                     <!-- End Of Work Experience Content -->
                     <!-- Start Of Education Content -->
                     <h1>Education</h1>
                         <h2>CCT College Dublin</h2>
                             <h3>Higher Diploma in Science in Computing</h3>
                                 <h4>September 2018 - August 2020</h4>
-                                    <small>I was testing software during htis time.</small>
+                                    <small>I am currently studying part time.</small>
                         <h2>Finglas Training Centre</h2>
                             <h3>Software Developer</h3>
                                 <h4>April 2017 - April 2018</h4>
-                                    <small>I was testing software during htis time.</small>
+                                    <small>I was training as a Software Developer using Java.</small>
                         <h2>Baldoyle Training Centre</h2>
                             <h3>Software Tester</h3>
                                 <h4>November 2016 - April 2017</h4>
-                                    <small>I was testing software during htis time.</small>
+                                    <small>I was testing software doing manual testing and automation testing.</small>
                                     <!-- End Of Education Content -->
                     <!-- Start Of Self Studies Content -->
                     <h1>Self Studies</h1>
-                        <p>Book 1</p>
-                        <p>Book 2</p>
-                        <p>Book 3</p>
-                        <p>Book 4</p>
+                       <table class="center">
+                            <tr>
+                                <th class="colour"><b>Book Name</b></th>
+                                <th class="colour"><b>Author</b></th>
+                            </tr>
+                            <tr>
+                                <td>Querying Microsoft SQL Server 2012</td>
+                                <td>Dejan Sarka</td>
+                            </tr>
+                            <tr>
+                                <td>OCA Java SE 7 Programmer I Certification Guide</td>
+                                <td>Mala Gupta</td>
+                            </tr>
+                            <tr>
+                                <td>Fundamentals of Computer Programming with C#</td>
+                                <td>Svetlin Nakov</td>
+                            </tr>
+                            <tr>
+                                <td>OCA Oracle Certified Associate Java SE 8 Programmer I Study Guide</td>
+                                <td>Jeanne Boyarsky & Scott Selikoff</td>
+                            </tr>
+                        </table>
                         <!-- End Of Self Studies Content -->
                     <!-- Start Of Skills Content -->
                     <h1>Skills</h1>
-                        <p>Book 1</p>
-                        <p>Book 2</p>
-                        <p>Book 3</p>
-                        <p>Book 4</p>
+                        <p>Flexible and Adaptable</p>
+                        <p>Enthusiastic and Committed</p>
+                        <p>Ability to work well under pressure</p>
+                        <p>Excellent communication and IT skills</p>
+                        <p>Work efficiently both independently and as part of a team</p>
+                        <p>Analytically focused, a good listener and a quick learner who enjoys challenges</p>
                         <!-- End Of Skills Content -->
                     <!-- Start Of Hobbies & Interests Content -->
                     <h1>Hobbies & Interests</h1>
-                        <p>1</p>
-                        <p>2</p>
-                        <p>3</p>
-                        <p>4</p>
-                        <p>5</p>
+                        <p>Yoga</p>
+                        <p>Football</p>
+                        <p>Meditation</p>
+                        <p>Fantasy Books</p>
+                        <p>Computers (Hardware & Software)</p>
+                        <br>
                         <!-- End Of Hobbies & Interests -->
                 </div>
                 <!-- End Of Div Content -->
