--- a/WEBLAB1-3/education.html
+++ b/WEBLAB1-3/education.html
@@ -6,28 +6,30 @@
         <body>
             <div class="main">
                 <div class="header">
-                    <a href="index.html">Home</a>
-                    <a href="profile.html">Profile</a>
-                    <a href="workExperience.html">Work Experience</a>
-                    <a href="education.html">Education</a>
-                    <a href="selfStudies.html">Self Studies</a>
-                    <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
-                    
+                    <a href="index.html">Home</a>    
+                        <a href="homepage.html">CV Page</a>
+                        <a href="profile.html">Profile</a>
+                        <a href="workExperience.html">Work Experience</a>
+                        <a href="education.html">Education</a>
+                        <a href="selfStudies.html">Self Studies</a>
+                        <a href="skills.html">Skills</a>
+                        <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
+                        <a href="contactInformation.html">Contact Information</a>
                 </div>
                 <div class="content">
                     <h1>Education</h1>
                         <h2><i>CCT College Dublin</h2>
                             <h3><i>Higher Diploma in Science in Computing</h3>
                                 <h4><i>September 2018 - August 2020</h4>
-                                    <small>I was testing software during htis time.</small>
+                                    <small>I am currently studying part time.</small>
                         <h2><i>Finglas Training Centre</h2>
                             <h3><i>Software Developer</h3>
                                 <h4><i>April 2017 - April 2018</h4>
-                                    <small>I was testing software during htis time.</small>
+                                    <small>I was training as a Software Developer using Java.</small>
                         <h2><i>Baldoyle Training Centre</h2>
                             <h3><i>Software Tester</h3>
                                 <h4><i>November 2016 - April 2017</h4>
-                                    <small>I was testing software during htis time.</small>
+                                    <small>I was testing software doing manual testing and automation testing.</small>
                                     <hr>
                 </div>
                 <div class="footer">
