--- a/WEBLAB1-3/hobbiesAndInterests.html
+++ b/WEBLAB1-3/hobbiesAndInterests.html
@@ -6,19 +6,24 @@
         <body>
             <div class="main">
                 <div class="header">
-                    <a href="index.html">Home</a>
-                    <a href="profile.html">Profile</a>
-                    <a href="workExperience.html">Work Experience</a>
-                    <a href="education.html">Education</a>
-                    <a href="selfStudies.html">Self Studies</a>
-                    <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
+                    <a href="index.html">Home</a>    
+                        <a href="homepage.html">CV Page</a>
+                        <a href="profile.html">Profile</a>
+                        <a href="workExperience.html">Work Experience</a>
+                        <a href="education.html">Education</a>
+                        <a href="selfStudies.html">Self Studies</a>
+                        <a href="skills.html">Skills</a>
+                        <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
+                        <a href="contactInformation.html">Contact Information</a>
                 </div>
                 <div class="content">
                     <h1>Hobbies & Interests</h1>
                          <ul style="list-style-type:disc">
-                            <li>Football</li>
-                            <li>Games</li>
-                            <li>Meditation</li>
+                        <li>Football</li>
+                        <li>Games</li>
+                        <li>Meditation</li>
+                        <li>Computers (Hardware & Software)</li>
+                        <li>Fantasy Books</li>
                         </ul>  
                         <hr>
                 </div>
