--- a/WEBLAB1-3/index.html
+++ b/WEBLAB1-3/index.html
@@ -1,95 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>CV: Stephen Gregan</title>
-        <!-- Link To CSS Called (style.css) -->
-        <link rel="stylesheet" type="text/css" href="C:\Users\Stephen\Desktop\_WEBDEV\WEBLAB1-3\css\style.css">
-    </head>
-        <body>
-            <!-- Start Of Div Main -->
-            <div class="main">
-                <!-- Start Of Div Header -->
-                <div class="header">
-                    <a href="index.html">Home</a>
-                    <a href="profile.html">Profile</a>
-                    <a href="workExperience.html">Work Experience</a>
-                    <a href="education.html">Education</a>
-                    <a href="selfStudies.html">Self Studies</a>
-                    <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
-                </div>
-                <!-- End Of Div Header -->
-                <!-- Start Of Div Content -->
-                <div class="content">
-                    <!-- Start Of Profile -->
-                    <h1>Profile</h1>
-                        <p>Hi my name is <i>Stephen Gregan</i>.  I am a <b>Software Developer</b>.  I am proficient in <strong>C#</strong> and <em>Java</em></p>
-                        <hr>
-                        <!-- End Of Profile -->
-                        <!-- Start Of Work Experience -->
-                    <h1>Work Experience</h1>
-                        <h2><i>Translation.ie</i></h2>
-                            <h3><i>Software Developer</i></h3>
-                                <h4><i>April 2018 - September 2018<i></h4>
-                                    <small>I was testing software during htis time.</small>
-                                    <hr>
-                                    <!-- End Of Work Experience -->
-                    <!-- Start Of Education -->
-                    <h1>Education</h1>
-                        <h2><i>CCT College Dublin<i></h2>
-                            <h3><i>Higher Diploma in Science in Computing</i></h3>
-                                <h4>September 2018 - August 2020</h4>
-                                    <small>I was testing software during htis time.</small>
-                        <h2><i>Finglas Training Centre<i></h2>
-                            <h3><i>Software Developer</i></h3>
-                                <h4>April 2017 - April 2018</h4>
-                                    <small>I was testing software during htis time.</small>
-                        <h2><i>Baldoyle Training Centre</i></h2>
-                            <h3><i>Software Tester</i></h3>
-                                <h4>November 2016 - April 2017</h4>
-                                    <small>I was testing software during htis time.</small>
-                                    <hr>
-                                    <!-- End Of Education -->
-                    <!-- Start Of Self Studies -->
-                    <h1>Self Studies</h1>
-                        <table>
-                            <tr>
-                                <th><b>Book Name</b></th>
-                                <th><b>Author</b></th>
-                            </tr>
-                            <tr>
-                                <td>Hello</td>
-                                <td>Friend</td>
-                            </tr>
-                        </table>
-                        <hr>
-                        <!-- End Of Self Studies -->
-                        <!-- Start Of Skills -->
-                    <h1>Skills</h1>
-                        <ul style="list-style-type:disc">
-                            <li>Football</li>
-                            <li>Games</li>
-                            <li>Meditation</li>
-                        </ul>  
-                        <hr>
-                        <!-- End Of Skills -->
-                        <!-- Start Of Hobbies & Interests -->
-                    <h1>Hobbies & Interests</h1>
-                        <ul style="list-style-type:disc">
-                            <li>Football</li>
-                            <li>Games</li>
-                            <li>Meditation</li>
-                        </ul>  
-                        <hr>
-                        <!-- End Of Hobbies & Interests -->
-                </div>
-                <!-- End Of Div Content -->
-                <!-- Start Of Div Footer -->
-                <div class="footer">
-                    <img src="C:\Users\Stephen\Desktop\_WEBDEV\WEBLAB1-3\img\3A4wkht.png" class="img" alt="Mr Robot" width="500" height="500">
-                </div>  
-                <!-- End Of Div Footer -->
-            </div>
-            <!-- End Of Div Main -->
-        </body>
-</html>   
-
+<head>
+    <title></title>
+    <!-- <link rel="stylesheet" type="text/css" href="C:\Users\Stephen\Desktop\_WEBDEV\WEBDEV2-2\css\homepage.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous"> -->
+</head>
+<body>
+    <h1 class="firstneon" data-text="[Stephen Gregan's]">Stephen Gregan's</h1>
+    <h1 class="secondneon" data-text="[Curriculum Vitae :)]">Curriculum Vitae :)</h1>
+    <ul>
+        <!-- Links -->
+        <li><a href="index.html"><i class="fas fa-home"></i></a></li>
+        <li><a href="homepage.html"><i class="fas fa-building"></i></a></li>
+        <li><a href="profile.html"><i class="fas fa-user-alt"></i></a></li>
+        <li><a href="workExperience.html"><i class="fas fa-briefcase"></i></a></li>
+        <li><a href="education.html"><i class="fas fa-graduation-cap"></i></a></li>
+        <li><a href="selfStudies.html"><i class="fas fa-book"></i></a></li>
+        <li><a href="skills.html"><i class="fas fa-arrows-alt"></i></a></li>
+        <li><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></i></a></li>
+        <li><a href="contactInformation.html"><i class="fas fa-phone"></i></i></a></li>
+    </ul>
+    <p> Under Construction Please go to <a href="homepage.html">My Cv</a> to view my CV.  My Cv is now finished and styled with CSS.  Please refer to WEBDEV2-2.  Enjoy :)</p>
+</body>
+</html>
