--- a/WEBLAB1-3/skills.html
+++ b/WEBLAB1-3/skills.html
@@ -2,25 +2,19 @@
 <html>
     <head>
         <title>CV: Stephen Gregan</title>
-        <link rel="stylesheet" type="text/css" href="C:\Users\Stephen\Desktop\_WEBDEV\WEBDEV2-2\css\style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     </head>
         <body>
             <div class="main">
                 <div class="header">
-	                <ul class="headericons">
-	                	<li><a href="index.html"><i class="fas fa-home"></i></a></li>
-	            		<li><a href="homepage.html"><i class="fas fa-building"></i></a></li>
-	                	<li><a href="profile.html"><i class="fas fa-user-alt"></i></a></li>
-	                    <li><a href="workExperience.html"><i class="fas fa-briefcase"></i></a></li>
-	                    <li><a href="education.html"><i class="fas fa-graduation-cap"></i></a></li>
-	                    <li><a href="selfStudies.html"><i class="fas fa-book"></i></a></li>
-	                    <li><a href="skills.html"><i class="fas fa-arrows-alt"></i></a></li>
-	                    <li><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></i></a></li>
-	                    <li><a href="contactInformation.html"><i class="fas fa-phone"></i></i></a></li>
-	    			</ul>
+	                <a href="index.html">Home</a>    
+                        <a href="homepage.html">CV Page</a>
+                        <a href="profile.html">Profile</a>
+                        <a href="workExperience.html">Work Experience</a>
+                        <a href="education.html">Education</a>
+                        <a href="selfStudies.html">Self Studies</a>
+                        <a href="skills.html">Skills</a>
+                        <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
+                        <a href="contactInformation.html">Contact Information</a>
 	                </div>
 	                <div class="content">
 	                    <h1>Skills</h1>
