--- a/WEBDEV2-2/index.html
+++ b/WEBDEV2-2/index.html
@@ -7,17 +7,18 @@
 </head>
 <body>
     <h1 class="firstneon" data-text="[Stephen Gregan's]">Stephen Gregan's</h1>
-    <h1 class="secondneon" data-text="[Curriculum Vitae]">Curriculum Vitae</h1>
+    <h1 class="secondneon" data-text="[Curriculum Vitae :)]">Curriculum Vitae :)</h1>
     <ul>
+        <!-- Links -->
         <li><a href="index.html"><i class="fas fa-home"></i></a></li>
-            <li><a href="homepage.html"><i class="fas fa-building"></i></a></li>
-                <li><a href="profile.html"><i class="fas fa-user-alt"></i></a></li>
-                    <li><a href="workExperience.html"><i class="fas fa-briefcase"></i></a></li>
-                        <li><a href="education.html"><i class="fas fa-graduation-cap"></i></a></li>
-                            <li><a href="selfStudies.html"><i class="fas fa-book"></i></a></li>
-                                <li><a href="skills.html"><i class="fas fa-arrows-alt"></i></a></li>
-                                    <li><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></i></a></li>
-                                        <li><a href="contactInformation.html"><i class="fas fa-phone"></i></i></a></li>
+        <li><a href="homepage.html"><i class="fas fa-building"></i></a></li>
+        <li><a href="profile.html"><i class="fas fa-user-alt"></i></a></li>
+        <li><a href="workExperience.html"><i class="fas fa-briefcase"></i></a></li>
+        <li><a href="education.html"><i class="fas fa-graduation-cap"></i></a></li>
+        <li><a href="selfStudies.html"><i class="fas fa-book"></i></a></li>
+        <li><a href="skills.html"><i class="fas fa-arrows-alt"></i></a></li>
+        <li><a href="hobbiesAndInterests.html"><i class="fas fa-basketball-ball"></i></a></li>
+        <li><a href="contactInformation.html"><i class="fas fa-phone"></i></i></a></li>
     </ul>
 </body>
 </html>
