--- a/WEBLAB1-1/index.html
+++ b/WEBLAB1-1/index.html
@@ -4,6 +4,7 @@
         <title>CV: Stephen Gregan</title>
     </head>
         <body>
+        	<!-- Paragraph Tag -->
             <p>This is the beginning of my profile</p>
         </body>
 </html>   
