--- a/WEBLAB1-3/profile.html
+++ b/WEBLAB1-3/profile.html
@@ -6,16 +6,19 @@
         <body>
             <div class="main">
                 <div class="header">
-                    <a href="index.html">Home</a>
-                    <a href="profile.html">Profile</a>
-                    <a href="workExperience.html">Work Experience</a>
-                    <a href="education.html">Education</a>
-                    <a href="selfStudies.html">Self Studies</a>
-                    <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
+                    <a href="index.html">Home</a>    
+                        <a href="homepage.html">CV Page</a>
+                        <a href="profile.html">Profile</a>
+                        <a href="workExperience.html">Work Experience</a>
+                        <a href="education.html">Education</a>
+                        <a href="selfStudies.html">Self Studies</a>
+                        <a href="skills.html">Skills</a>
+                        <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
+                        <a href="contactInformation.html">Contact Information</a>
                 </div>
                 <div class="content">
                     <h1>Profile</h1>
-                        <p>Hi my name is <i>Stephen Gregan</i>.  I am a <b>Software Developer</b>.  I am proficient in <strong>C#</strong> and <em>Java</em></p>
+                        <p>Upcoming Software Developer with in-company application development experience, college studies and self study.  Experience in both <i>Software Testing</i> and <i>Software Development</i>.  Trained using <b>Agile</b> methodology.  Languages include <strong>Java</strong>, <em>C#</em> and <strong>SQL</strong>.  Proficient in various Microsoft Azure Cognitive Services.  In my spare time I am learning JavaScript along with Node.js.  I am also interested in learning Ruby and Ruby on Rails.  All my code is available to view on my GitHub Account: https://github.com/StephenGregan.</p>
                         <hr>
                 </div>
                 <div class="footer">
