--- a/WEBLAB1-3/selfStudies.html
+++ b/WEBLAB1-3/selfStudies.html
@@ -7,23 +7,38 @@
         <body>
             <div class="main">
                 <div class="header">
-                    <a href="index.html">Home</a>
-                    <a href="profile.html">Profile</a>
-                    <a href="workExperience.html">Work Experience</a>
-                    <a href="education.html">Education</a>
-                    <a href="selfStudies.html">Self Studies</a>
-                    <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
+                    <a href="index.html">Home</a>    
+                        <a href="homepage.html">CV Page</a>
+                        <a href="profile.html">Profile</a>
+                        <a href="workExperience.html">Work Experience</a>
+                        <a href="education.html">Education</a>
+                        <a href="selfStudies.html">Self Studies</a>
+                        <a href="skills.html">Skills</a>
+                        <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
+                        <a href="contactInformation.html">Contact Information</a>
                 </div>
                 <div class="content">
                     <h1>Self Studies</h1>
-                       <table>
+                       <table class="center">
                             <tr>
                                 <th><b>Book Name</b></th>
                                 <th><b>Author</b></th>
                             </tr>
                             <tr>
-                                <td>Hello</td>
-                                <td>Friend</td>
+                                <td>Querying Microsoft SQL Server 2012</td>
+                                <td>Dejan Sarka</td>
+                            </tr>
+                            <tr>
+                                <td>OCA Java SE 7 Programmer I Certification Guide</td>
+                                <td>Mala Gupta</td>
+                            </tr>
+                            <tr>
+                                <td>Fundamentals of Computer Programming with C#</td>
+                                <td>Svetlin Nakov</td>
+                            </tr>
+                            <tr>
+                                <td>OCA Oracle Certified Associate Java SE 8 Programmer I Study Guide</td>
+                                <td>Jeanne Boyarsky & Scott Selikoff</td>
                             </tr>
                         </table>
                         <hr>
