--- a/WEBLAB1-3/workExperience.html
+++ b/WEBLAB1-3/workExperience.html
@@ -6,19 +6,22 @@
         <body>
             <div class="main">
                 <div class="header">
-                    <a href="index.html">Home</a>
-                    <a href="profile.html">Profile</a>
-                    <a href="workExperience.html">Work Experience</a>
-                    <a href="education.html">Education</a>
-                    <a href="selfStudies.html">Self Studies</a>
-                    <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
+                    <a href="index.html">Home</a>    
+                        <a href="homepage.html">CV Page</a>
+                        <a href="profile.html">Profile</a>
+                        <a href="workExperience.html">Work Experience</a>
+                        <a href="education.html">Education</a>
+                        <a href="selfStudies.html">Self Studies</a>
+                        <a href="skills.html">Skills</a>
+                        <a href="hobbiesAndInterests.html">Hobbies & Interests</a>
+                        <a href="contactInformation.html">Contact Information</a>
                 </div>
                 <div class="content">
                     <h1>Work Experience</h1>
                         <h2><i>Translation.ie</h2>
                             <h3><i>Software Developer</h3>
                                 <h4>April 2018 - September 2018</h4>
-                                    <small>I was testing software during htis time.</small>
+                                    <small>I was working as a developer using Microsoft Cognitive Services.  All my coding in company was in C#.</small>
                                     <hr>
                 </div>
                 <div class="footer">
